--- a/app/views/SubredditViewItem.css
+++ b/app/views/SubredditViewItem.css
@@ -7,6 +7,7 @@
   border-radius: 2px;
 }
 
+
 .thread__upper {
   position: relative;
   background-color: white;
@@ -19,5 +20,27 @@
   left: 0;
   right: 0;
   bottom: 0;
+  background-color: #888;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  color: rgba(0,0,0,0.64);
+  transition: background-color 0.6s ease-in-out, color 0.3s ease-in-out;
+  font-size: 30px;
+}
+
+.thread--would-download .thread__lower {
+  background-color: #DC7;
+}
+
+.thread--resetting .thread__upper {
+  transition: transform 0.3s ease-in-out;
+}
+.thread--downloading .thread__lower {
+  background-color: #FD0;
+  color: rgba(0,0,0,0);
+}
+
+.thread--downloaded .thread__lower {
   background-color: #0D0;
 }
