--- a/app/views/ThreadView.css
+++ b/app/views/ThreadView.css
@@ -1,7 +1,44 @@
-ul.comments, ul.comments ul {
+.post, .comments {
+  overflow: hidden;
+  margin: 5px;
+  padding: 5px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  position: relative;
+  border-radius: 2px;
+  background-color: white;
+}
+
+.comments, .comments .comment__replies {
   list-style: none;
   -webkit-padding-start: 0;
 }
-ul.comments ul {
+.comment__replies {
   margin-left: 20px;
+}
+
+.comment {
+  padding: 0 5px;
+  margin: 5px 0;
+}
+.comment__body {
+  border-left: 3px solid red;
+  padding-left: 5px;
+}
+.comment__body > .md > *:first-child,
+.comment__body > *:first-child {
+  margin-top: 0;
+}
+.comment__body > .md > *:last-child,
+.comment__body > *:last-child {
+  margin-bottom: 0;
+}
+
+.comment__body blockquote {
+  color: rgba(0, 0, 0, 0.74);
+  font-style: italic;
+  margin: 0;
+  margin-left: 10px
+}
+.comment__body p {
+  margin: 0;
 }
