--- a/app/modules/View.css
+++ b/app/modules/View.css
@@ -1,6 +1,11 @@
 .view {
   transition: transform 0.3s ease-in-out;
   transform: translateX(0);
+  max-width: 800px;
+  margin: 0 auto;
+  margin-top: 70px;
+  margin-bottom: 35px;
+  min-height: 100%;
 }
 .view.invisible.in {
   transform: translateX(100%);
