--- a/app/views/SubredditViewItem.css
+++ b/app/views/SubredditViewItem.css
@@ -1,6 +1,6 @@
 .thread {
   overflow: hidden;
-  margin: 5px;
+  margin: 5px 0;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
   border-radius: 2px;
