--- a/app/modules/LinkViewer.css
+++ b/app/modules/LinkViewer.css
@@ -16,10 +16,10 @@
   opacity: 1;
 }
 
-.linkviewer--single .linkviewer__forward,
-.linkviewer--single .linkviewer__backward,
-.linkviewer--single .linkviewer__details__count {
-  display: none;
+.linkviewer--last .linkviewer__forward,
+.linkviewer--first .linkviewer__backward,
+.linkviewer--first.linkviewer--last .linkviewer__details__count {
+  visibility: hidden;
 }
 
 .linkviewer__forward, .linkviewer__backward {
@@ -49,7 +49,18 @@
   max-width: 100%;
   max-height: 100%;
   will-change: transform;
+}
+
+.linkviewer--animating .linkviewer__container > * {
   transition: transform 0.3s ease-in-out;
+}
+
+.linkviewer--left .linkviewer__container > * {
+  transform: translateX(-100%);
+}
+
+.linkviewer--right .linkviewer__container > * {
+  transform: translateX(100%);
 }
 
 .linkviewer__container > .external {
@@ -60,14 +71,6 @@
 
 .linkviewer__container > .error {
   color: red;
-}
-
-.linkviewer--left .linkviewer__container > * {
-  transform: translateX(-100%);
-}
-
-.linkviewer--right .linkviewer__container > * {
-  transform: translateX(100%);
 }
 
 .linkviewer__details {
