--- a/app/views/SubredditViewItem.css
+++ b/app/views/SubredditViewItem.css
@@ -17,6 +17,7 @@
   position: relative;
   background-color: white;
   margin-left: 8px;
+  transition: transform 0.3s ease-in-out;
 }
 
 .thread__lower {
@@ -30,21 +31,31 @@
   align-items: center;
   padding-left: 10px;
   color: rgba(0,0,0,0.64);
-  transition: background-color 0.6s ease-in-out, color 0.3s ease-in-out;
   font-size: 30px;
-}
-
-.thread:not(.thread--downloading):not(.thread--downloaded) .thread__lower:hover + .thread__upper {
-  transform: translateX(250px);
 }
 
 .thread--would-download .thread__lower {
   background-color: #DC7;
 }
 
-.thread--animatable .thread__upper {
-  transition: transform 0.3s ease-in-out;
+.thread:not(.thread--downloading):not(.thread--downloaded) .thread__lower:hover + .thread__upper {
+  will-change: transform;
+  transform: translateX(250px) translateZ(0);
 }
+
+.thread--dragging .thread__upper {
+  transition: none;
+}
+
+.thread--dragging .thread__upper,
+.thread--resetting .thread__upper {
+  will-change: transform;
+}
+
+.thread--resetting .thread__upper {
+  transform: translateX(0);
+}
+
 .thread--downloading .thread__lower {
   background-color: #FD0;
   color: rgba(0,0,0,0);
