--- a/app/views/LinkView.css
+++ b/app/views/LinkView.css
@@ -32,7 +32,8 @@
   position: absolute;
   top: 20px;
   right: 20px;
-  color: rgba(255, 255, 255, 0.54);
+  color: white;
+  text-shadow: 1px 0px black, -1px 0px black, 0px 1px black, 0px -1px black;
   margin: 0 !important;
 }
 
