--- a/app/views/SubredditViewItem.css
+++ b/app/views/SubredditViewItem.css
@@ -18,6 +18,65 @@
   background-color: white;
   margin-left: {{config.PULLBACK.MIN}}px;
   transition: transform 0.3s ease-in-out;
+  display: flex;
+  align-items: stretch;
+}
+
+.thread__thumbnail {
+  display: block;
+  width: 25%;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  flex-shrink: 0
+}
+
+.thread__details {
+  display: block;
+  flex-grow: 1;
+  padding: 5px 10px;
+}
+
+.thread__scores {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: stretch;
+  flex-shrink: 0;
+  width: 12%;
+}
+
+.thread__scores > * {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-left: 1px solid rgba(0, 0, 0, 0.54);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.54);
+}
+
+.thread__upvotes {
+  background-color: hsl(32, 100%, 85%);
+}
+
+.thread__downvotes {
+  background-color: hsl(210, 100%, 85%);
+}
+.thread__author {
+  font-size: 0.7em;
+  color: rgba(0,0,0,0.54);
+  margin-bottom: 10px;
+}
+
+.thread__scores > *:last-child {
+  border-bottom: none;
+}
+
+.thread__details {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: stretch;
 }
 
 .thread__lower {
