--- a/app/views/SubredditViewItem.css
+++ b/app/views/SubredditViewItem.css
@@ -43,7 +43,7 @@
   align-items: stretch;
   justify-content: stretch;
   flex-shrink: 0;
-  width: 12%;
+  width: 10vw;
 }
 
 .thread__scores > * {
