--- a/app/views/LinkView.css
+++ b/app/views/LinkView.css
@@ -10,6 +10,8 @@
   display: flex;
   align-items: stretch;
   justify-content: center;
+  z-index: 500;
+  padding-top: 70px;
 }
 
 .linkviewer--visible {
