Fix tabindex in SubredditView

--- a/app/views/SubredditViewItem.css
+++ b/app/views/SubredditViewItem.css
@@ -7,11 +7,15 @@
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   position: relative;
   border-radius: 2px;
+  text-decoration: none;
+  color: inherit;
+  display: block;
 }
 
 .thread--nsfw .thread__upper {
   background-color: #fbb;
 }
+
 .thread--moderator .thread__author {
   color: hsl(120, 100%, 30%);
 }
